# ChessInCpp

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Move.h  main.cpp  test_validator.cpp
